--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#C02B00</color>
-    <color name="colorPrimaryDark">#C02B00</color>
-    <color name="colorAccent">#FF9800</color>
+    <color name="colorPrimary">#661800</color>
+    <color name="colorPrimaryDark">#661800</color>
+    <color name="colorAccent">#C02B00</color>
 </resources>
