--- a/app/src/main/res/layout/azan_times_bottom.xml
+++ b/app/src/main/res/layout/azan_times_bottom.xml
@@ -22,7 +22,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/bg" />
+            app:srcCompat="@drawable/transparent_bg" />
 
         <ImageView
             android:id="@+id/imageView5"
